--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+
+@layer components{
+  .heroButton{  
+    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest
+     text-gray-500 transition-all hover:border-[#f7aB0A]/40 hover:text-[#f7aB0A]/40
+  }
+}
