--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,4 +32,9 @@ body {
     @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest
      text-gray-500 transition-all hover:border-[#f7aB0A]/40 hover:text-[#f7aB0A]/40
   }
+
+  .contactInput{
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500
+    placeholder-gray-500 transition-all focus:border-[#F7Ab0a]/40 focus:text-[#F7Ab0a]/40 hover:border-[#F7AB0A]/40
+  }
 }
